# ChangeLog for app-misc/cl-kde-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-kde-meta-4.8.2-r1 (06 Apr 2012)

  06 Apr 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.8.2.ebuild, +cl-kde-meta-4.8.2-r1.ebuild:
  remove kde-base/ksecrets

*cl-kde-meta-4.8.2 (05 Apr 2012)

  05 Apr 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.8.0.ebuild, +cl-kde-meta-4.8.2.ebuild:
  version bump

  07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.4.4-r1.ebuild, -cl-kde-meta-4.5.1-r4.ebuild,
  -cl-kde-meta-4.6.0-r5.ebuild:
  remove old versions

  30 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.8.0.ebuild:
  stable KDE 4.8

*cl-kde-meta-4.8.0 (28 Jan 2012)

  28 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.7.0-r4.ebuild, +cl-kde-meta-4.8.0.ebuild:
  version bump

*cl-kde-meta-4.7.0-r4 (23 Nov 2011)

  23 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0-r3.ebuild, +cl-kde-meta-4.7.0-r4.ebuild:
  add kde-misc/synaptiks

*cl-kde-meta-4.7.0-r3 (29 Aug 2011)
*cl-kde-meta-4.6.0-r6 (29 Aug 2011)

  29 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.6.0-r4.ebuild, cl-kde-meta-4.6.0-r5.ebuild,
  +cl-kde-meta-4.6.0-r6.ebuild, -cl-kde-meta-4.7.0-r2.ebuild,
  +cl-kde-meta-4.7.0-r3.ebuild:
  remote kde-base/krfb

*cl-kde-meta-4.7.0-r2 (23 Aug 2011)

  23 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0-r1.ebuild, +cl-kde-meta-4.7.0-r2.ebuild:
  remove kget

*cl-kde-meta-4.7.0-r1 (15 Aug 2011)

  15 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0.ebuild, +cl-kde-meta-4.7.0-r1.ebuild:
  Add kde-base/kdepim-l10n

*cl-kde-meta-4.7.0 (28 Jul 2011)

  28 Jul 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.7.0.ebuild:
  Add kde 4.7.0
