@@ -2,6 +2,13 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.9.0 (06 Aug 2012)
+
+  06 Aug 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-kde-meta-4.6.0-r6.ebuild, -cl-kde-meta-4.7.0-r4.ebuild,
+  +cl-kde-meta-4.9.0.ebuild:
+  version bump
+
 *cl-kde-meta-4.8.2-r1 (06 Apr 2012)
 
   06 Apr 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
